# baloo-bear

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.baloo/: documentation-catalog.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-python.yml  deploy.yml  docs.yml  scorecard.yml
.husky/: install.mjs  pre-commit
baloo/: __init__.py  logging_config.py  version.py
baloo/agent/: __init__.py  client.py  config.py  costs.py  logger.py  pi_runtime.py  prompts.py  repo_provision.py  sandbox.py  schemas.py  thread_agent.py  thread_prompts.py
baloo/config/: __init__.py  settings.py
baloo/dashboard/: __init__.py  auth.py  queries.py  router.py
baloo/db/: __init__.py  engine.py  feedback_service.py  models.py  service.py  tenant.py
baloo/documentation/: __init__.py  analyzer.py  catalog.py  models.py  prompts.py  report.py  work_items.py
baloo/fidelity/: __init__.py  fidelity_analyzer.py  fidelity_report.py  linear_fetcher.py  models.py  plan_fetcher.py  prompts.py  ticket_extractor.py
baloo/github/: __init__.py  api_client.py  auth.py  checks_api.py  discussions.py  models.py  webhook_handler.py
baloo/outcomes/: labeler.py  signals.py
baloo/processor/: __init__.py  decision_engine.py  findings_filter.py  formatter.py  fp_prompts.py  fp_verifier.py  severity_router.py
baloo/review/: orchestrator.py  repo_context.py
docs/: README.md  ROADMAP.md  configuration.md  contributing.md  development.md  getting-started.md  index.md  llms.txt
docs/features/: dashboard.md  discussions.md  documentation-drift.md  fidelity.md  fp-verification.md  guidelines.md  models.md  review-agent.md  severity-routing.md  thread-agent.md
docs/plans/: fp-reduction-pass.md
extensions/: baloo-ast-tools.ts  package-lock.json  package.json
scripts/: dry_run_pr.py  local_review.py  seed_dashboard.py
tests/: __init__.py  conftest.py  test_checks_api.py  test_local_review.py  test_logging_config.py  test_prompts.py  test_prompts_cyclic.py  test_settings_installation_ids.py  test_severity_router.py
tests/agent/: test_ast_tools_integration.py  test_client_integration.py  test_config.py  test_costs.py  test_error_classification.py  test_json_extraction.py  test_logger.py  test_prompts.py  test_repo_provision.py  test_runtime.py  test_sandbox.py  test_schemas.py  test_thread_agent.py  test_thread_integration.py  test_thread_prompts.py
tests/config/: test_settings.py
tests/dashboard/: test_outcomes_page.py  test_queries.py  test_router.py
tests/db/: test_engine.py  test_feedback_service.py  test_models.py  test_service.py  test_tenant.py
tests/documentation/: test_analyzer.py  test_baloo_catalog.py  test_catalog.py  test_models.py  test_prompts.py  test_report.py  test_work_items.py
tests/fidelity/: __init__.py  (+7 more)
(+54 files in other folders)
